<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dialog_input_group_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_group_id_input"
            android:padding="5dp"
            android:textColor="#333"
            android:textColorHint="#999"
            android:theme="@style/EditTextView" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dialog_input_device_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_device_id_input"

            android:padding="5dp"
            android:textColor="#333"
            android:textColorHint="#999"
            android:theme="@style/EditTextView" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dialog_input_scale"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_scale_input"

            android:padding="5dp"
            android:textColor="#333"
            android:textColorHint="#999"
            android:theme="@style/EditTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="识别精度：2-32，默认16"
            android:textColor="#999"
            android:textSize="12sp" />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dialog_input_delay_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_device_delay_time"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="#333"
            android:textColorHint="#999"
            android:theme="@style/EditTextView" />

    </LinearLayout>
</LinearLayout>